More grid changes and label changes

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -377,7 +377,7 @@
 			<!-- First Row -->
 			<div class="cc-sketches">
 
-				<h3>Sketch of Store Locator</h3>
+				<h3 class="wireframe-hr">Sketch of Store Locator</h3>
 			
 				<img src="images/cc-locator-sketch-img.jpg" class="cc-sketches-img img-fluid">
 
@@ -385,7 +385,7 @@
 
 			<div class="cc-wireframe-img1">
 
-				<h3>Lo-Fi Store Locator</h3>
+				<h3 class="wireframe-hr">Lo-Fi Store Locator</h3>
 
 				<img src="images/cc-map-lo-img.png" class="cc-wireframe img-fluid">
 
@@ -393,7 +393,7 @@
 
 			<div class="cc-wireframe-img2">
 
-				<h3>Finished Store Locator</h3>
+				<h3 class="wireframe-hr">Finished Store Locator</h3>
 
 				<img src="images/cc-map-final-img.png" class="cc-wireframe img-fluid">
 
@@ -402,7 +402,7 @@
 			<!-- Second Row -->
 			<div class="cc-sketches">
 
-				<h3>Sketch of Inventory</h3>
+				<h3 class="wireframe-hr">Sketch of Inventory</h3>
 			
 				<img src="images/cc-inventory-sketch-img.jpg" class="cc-sketches-img img-fluid">
 
@@ -410,7 +410,7 @@
 
 			<div class="cc-wireframe-img1">
 
-				<h3>Lo-Fi Inventory</h3>
+				<h3 class="wireframe-hr">Lo-Fi Inventory</h3>
 
 				<img src="images/cc-inventory1.png" class="cc-wireframe img-fluid">
 
@@ -418,7 +418,7 @@
 
 			<div class="cc-wireframe-img2">
 
-				<h3>Finished Inventory</h3>
+				<h3 class="wireframe-hr">Finished Inventory</h3>
 
 				<img src="images/cc-inventory-final1-img.png" class="cc-wireframe img-fluid">
 
@@ -427,7 +427,7 @@
 			<!-- Third Row -->
 			<div class="cc-sketches">
 
-				<h3>Sketch of Comic Details</h3>
+				<h3 class="wireframe-hr">Sketch of Comic Details</h3>
 			
 				<img src="images//cc-detail-sketch-img.jpg" class="cc-sketches-img img-fluid">
 
@@ -435,7 +435,7 @@
 
 			<div class="cc-wireframe-img1">
 
-				<h3>Lo-Fi Comic Details</h3>
+				<h3 class="wireframe-hr">Lo-Fi Comic Details</h3>
 
 				<img src="images/cc-inventory-lo-img.png" class="cc-wireframe img-fluid">
 
@@ -443,7 +443,7 @@
 
 			<div class="cc-wireframe-img2">
 
-				<h3>Finished Comic Details</h3>
+				<h3 class="wireframe-hr">Finished Comic Details</h3>
 
 				<img src="images/cc-inventory-final2-img.png" class="cc-wireframe img-fluid">
 
