Refactored grid for mobile

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -282,9 +282,9 @@
 					</div>
 
 					<div class="cs-sw-weaknesses cc-sw-weaknesses">
-						<p class="swot-hrs swot-hrs-white"><strong>Weaknesses</strong></p>
+						<p class="swot-hrs"><strong>Weaknesses</strong></p>
 						
-						<ul class="p-swot p-swot-white">
+						<ul class="p-swot">
 							<li>High over-head costs.</li>
 							<li>Customers choosing physical copies over e-books.</li>
 						</ul>
@@ -301,9 +301,9 @@
 					</div>
 
 					<div class="cs-sw-threats cc-sw-threats">
-						<p class="swot-hrs swot-hrs-white"><strong>Threats</strong></p>
+						<p class="swot-hrs"><strong>Threats</strong></p>
 						
-						<ul class="p-swot p-swot-white">
+						<ul class="p-swot">
 							<li>Cheap price model.</li>
 							<li>Growing expansion from competitors on mobile devices.</li>
 							<li>Data breaches.</li>
