Tried fixing personas again

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -195,7 +195,7 @@
 
 		<div class="persona-left">
 
-			<img src="images/cc-alice-img.png" class="persona-1 cc-personas-img">
+			<img src="images/cc-alice-img.png" class="persona-1 cc-personas-img img-fluid">
 					
 			<h3 class="persona-hr">Alice</h3>
 
@@ -225,9 +225,9 @@
 
 		<div class="persona-right">
 
-			<img src="images/cc-carl-img.png" class="cs-mobile-persona">
+			<img src="images/cc-carl-img.png" class="cs-mobile-persona img-fluid">
 
-			<img src="images/cc-carl-img.png" class="persona-2 cc-personas-img">
+			<img src="images/cc-carl-img.png" class="persona-2 cc-personas-img img-fluid">
 					
 			<h3 class="persona-hr">Zachary</h3>
 
