Changes made to home page

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
 		 <div class="cc-case">
 
-		  	<h2>ComicCrusade</h1>
+		  	<h2 class="case-study-hr">ComicCrusade</h1>
 		  	<p>Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
 		  	<a class="button button-b" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
@@ -111,7 +111,7 @@
 
 		  <div class="fs-case">
 
-		  	<h2>FoodSwitch</h1>
+		  	<h2 class="case-study-hr">FoodSwitch</h1>
 		  	<p>A web-based app for people who want to live a healthier lifestyle.</p>
 		  	<a class="button button-b" href="foodswitch.html" role="button">SEE CASE STUDY</a>
 
