Changes to Home page based on Feedback from last week

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -92,13 +92,13 @@
 			
 			<div class="cc-hero-1">
 
-				<img src="images/cc-hero-1.png" class="img-fluid">
+				<img src="images/cc-hero-1.png" class="cc-phone-img">
 
 			</div>
 
 			<div class="cc-hero-2">
 
-				<img src="images/cc-hero-2.png" class="img-fluid">
+				<img src="images/cc-hero-2.png" class="cc-phone-img">
 
 			</div>
 			
