--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			
 			<a class="logo" href="index.html"><img src="images/logo-img.png" class="portfolio-logo"/></a>
 
-			<h1 class="logo-hr">Aidan D. Herlong</h1>
+			<h1 class="logo-hr"><a class="logo-link" href="index.html">Aidan D. Herlong</a></h1>
 		</div>
 
 		<nav>
@@ -76,15 +76,15 @@
 
 
 		<!-- Holds hero content text"-->
-		<div class="cs-hero-container">
+		<div class="main-hero-container">
 
 			<img src="images/avatar-img.png" class="mobile-avatar animated fadeIn">
 
-			<h1 class="animated fadeIn">Hi, I'm Aidan Herlong!</h1>
+			<h1 class="intro-hr animated fadeIn">Hi, I'm Aidan!</h1>
 
-            <p class="animated fadeIn">I'm a UX Designer from Houston, TX. I suppose you want to know more about me. Well then:</p>
+            <p class="intro-p animated fadeIn">I'm a UX Designer from Houston, TX. I suppose you want to know more about me. Take a look at my work below and <a href="aboutme.html"><strong>let's chat afterward!</strong></a></p>
              
-             <a class="button button-b animated fadeIn" href="aboutme.html" role="button">LET'S CHAT</a>
+            <!-- <a class="intro-btn button button-b animated fadeIn" href="aboutme.html" role="button">LET'S CHAT</a> -->
                 
 
 		</div>
