--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 	<title>About Me</title>
 
 	<!-- Google Fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:500,900|Vollkorn:400i" rel="stylesheet">
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/normalize.css">
@@ -33,7 +33,7 @@
 			
 			<a class="logo" href="index.html"><img src="images/logo-img.png" class="portfolio-logo"/></a>
 
-			<a href="index.html"><h1 class="logo-hr">Aidan D. Herlong</h1></a>
+			<h1 class="logo-hr"><a class="logo-link" href="index.html">Aidan D. Herlong</a></h1>
 
 		</div>
 
