Added changes recommended from last session

--- a/index.html
+++ b/index.html
@@ -99,11 +99,15 @@
 
 	<section id="case-studies" class="main-grid case-studies animated fadeIn">
 
-		 <img src="images/comic-crusade-img.png" class="cc-app">
+		 <div class="cc-img">
+
+			<img src="images/comic-crusade-img.png" class="cc-app">
+
+		 </div>
 
 		 <div class="cc-case">
 
-		  	<h2 class="case-study-hr">ComicCrusade</h1>
+		  	<h2 class="case-study-hr">ComicCrusade</h2>
 		  	<p>Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
 		  	<a class="button button-b" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
@@ -117,7 +121,11 @@
 
 		  </div>
 
-		   <img src="images/foodswitch-img.png" class="fs-app">
+		  <div class="fs-img">
+
+		  	<img src="images/foodswitch-img.png" class="fs-app">
+
+		  </div>
 
 	</section>
 
