--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 			<h1 class="intro-hr animated fadeIn">Hi, I'm Aidan!</h1>
 
-            <p class="intro-p animated fadeIn">I'm a UX Designer from Houston, TX. I suppose you want to know more about me. Take a look at my work below and <a href="aboutme.html"><strong>let's chat afterward!</strong></a></p>
+            <p class="intro-p animated fadeIn">A UX Designer from Houston, TX! Feel free to take a look at my work below and <a href="aboutme.html" class="connect-link"><strong>let's chat afterward!</strong></a></p>
              
             <!-- <a class="intro-btn button button-b animated fadeIn" href="aboutme.html" role="button">LET'S CHAT</a> -->
                 
@@ -108,15 +108,15 @@
 		 <div class="cc-case">
 
 		  	<h2 class="case-study-hr">ComicCrusade</h2>
-		  	<p>Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
+		  	<p class="case-study-p">Android OS app dedicated to finding the comics you are looking for in nearby stores.</p>
 		  	<a class="button button-b" href="comiccrusade.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
 
 		  <div class="fs-case">
 
-		  	<h2 class="case-study-hr">FoodSwitch</h1>
-		  	<p>A web-based app for people who want to live a healthier lifestyle.</p>
+		  	<h2 class="case-study-hr">FoodSwitch</h2>
+		  	<p class="case-study-p">A web-based app for people who want to live a healthier lifestyle.</p>
 		  	<a class="button button-b" href="foodswitch.html" role="button">SEE CASE STUDY</a>
 
 		  </div>
