Test on CC hero images

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -89,6 +89,8 @@
 		</div>
 
 		<!-- Holds image for hero -->
+
+		<div class="cc-hero-imgs">
 			
 			<div class="cc-hero-1">
 
@@ -101,8 +103,8 @@
 				<img src="images/cc-hero-2.png" class="cc-phone-img">
 
 			</div>
-			
-			<img src="images/cc-hero.png" class="cc-mobile-hero">
+
+		</div>
 
 	</section>
 
