Applied feedback from 9/12

--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/test.css">
+	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/animate.css">
 	
 </head>
@@ -34,7 +34,6 @@
 			<a class="logo" href="index.html"><img src="images/logo-img.png" class="portfolio-logo"/></a>
 
 			<h1 class="logo-hr"><a class="logo-link" href="index.html">Aidan D. Herlong</a></h1>
-
 		</div>
 
 		<nav>
@@ -71,33 +70,17 @@
 
 	</header>
 
-<!-- Hero -->
-
-<!--	<section class="about-hero">
-
-		
-		<div class="hero-container">
-
-			<h1 class="about-hero-hr">Hello Again!</h1>
-
-		
-			<img src="images/avatar-img.png" class="avatar-img">
-
-		</div>
-
-	</section> -->
-
 <!-- Main Content-->
 
-	<section class="main-content">
+	<section id="about-me-page" class="main-grid">
 
-		<div class="test-img">
+		<div class="about-hero-img">
 			<img src="images/about-hero-img2.png" class="img-fluid">
 		</div>
 
 		<div class="main">
 
-			<h1>Hello Again!</h1>
+			<h2>Hello Again!</h2>
 
 			<p>Thank you for taking the time to get to know more about me. Let's get started~</p>
 
@@ -108,7 +91,7 @@
 			<img src="images/art-img.png" class="img-fluid art-img-2">
 				<figcaption>"Ultra Instinct Garnet" fan illustration by Me</figcaption>
 
-			<h1 class="about-hr">My Journey</h1>
+			<h2 class="about-hr">My Journey</h2>
 					
 			<p class="about-p">Building my career as a UX Designer has been an adventure full of twists and turns. Many things influenced my ultimate decision of becoming one: starting my cartooning hobby, pursuing a technical degree in college, and overcoming an identity crisis post-graduation by the Summer of 2016.</p>
 
@@ -167,7 +150,7 @@
 
 	</section>
 
-	<section class="connect">
+	<section id="connect-links" class="connect main-grid">
 
 		<div class="connect-container">
 			
