--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -36,7 +36,7 @@
 			<h1 class="logo-hr"><a class="logo-link" href="index.html">Aidan D. Herlong</a></h1>
 		</div>
 
-		<nav class="navbar">
+		<nav>
 
 			<ul class="nav-links">
 
@@ -92,17 +92,11 @@
 
 		<div class="cc-hero-imgs">
 			
-			<div class="cc-hero-1">
 
 				<img src="images/cc-hero-1.png" class="cc-phone-img">
 
-			</div>
-
-			<div class="cc-hero-2">
 
 				<img src="images/cc-hero-2.png" class="cc-phone-img">
-
-			</div>
 
 		</div>
 
