Navbar changes and FS text changes

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -25,7 +25,6 @@
 
 <body>
 
-
 	<!-- Nav Bar -->
 	<header>
 
@@ -42,7 +41,7 @@
 
 				<li><a class="nav-link" href="index.html#case-studies">Case Studies</a></li>
 
-			    <li><a class="nav-link" href="#contact-footer">Contact</a></li>
+			    <li><a class="nav-link" href="aboutme.html">About</a></li>
 		
 			</ul>
 
