--- a/aboutme.html
+++ b/aboutme.html
@@ -26,7 +26,7 @@
 <body>
 
 
-<!-- Nav Bar -->
+	<!-- Nav Bar -->
 	<header>
 
 		<div class="logo-container"> <!-- Centers logo and header -->
@@ -42,7 +42,7 @@
 
 				<li><a class="nav-link" href="index.html#case-studies">Case Studies</a></li>
 
-			    <li><a class="nav-link" href="#contact-footer">Contact</a></li>
+			    <li><a class="nav-link" href="aboutme.html">About</a></li>
 		
 			</ul>
 
