Fixed hero image for homepage and FS CS text

--- a/foodswitch.html
+++ b/foodswitch.html
@@ -26,7 +26,7 @@
 <body>
 
 
-		<!-- Nav Bar -->
+	<!-- Nav Bar -->
 	<header>
 
 		<div class="logo-container"> <!-- Centers logo and header -->
@@ -56,7 +56,7 @@
 
 			  	<li class="side-link-1"><a class="nav-link" href="index.html#case-studies">Case Studies</a></li>
 
-			    <li class="side-link-2"><a class="nav-link" href="#contact-footer">Contact</a></li>
+			    <li class="side-link-2"><a class="nav-link" href="#contact-footer">About</a></li>
 
 		  	</div>
 
@@ -75,7 +75,7 @@
 	<section id="hero" class="fs-hero main-grid">
 
 		<!-- Holds hero content text"-->
-		<div class="cs-hero-container">
+		<div class="cs-hero-container fs-hero-container">
 
 			<h1 class="cs-hero-w animated fadeIn">FoodSwitch</h1>
 
@@ -89,8 +89,12 @@
 		</div>
 
 		<!-- Holds image for hero -->
+
+		<div class="fs-hero-img-container">
 			
 			<img src="images/fs-hero.png" class="fs-hero-img">
+
+		</div>
 
 	</section>
 
@@ -338,7 +342,7 @@
 					
 			<p>I created lo-fidelity wireframes of the landing page and main app screens using myBalsamiq based on the user flows. High-fidelity and final mockups were created using Adobe Illustrator. I exported all screens to InVision for user testing and GitHub for final presentation.</p>
 
-			<a href="">Click here to view all wireframes.</a>
+			<a href="https://drive.google.com/open?id=0Bw6eqczNjV2ULTBOT1lDUlVqUXM">Click here to view all wireframes.</a>
 
 		</div>
 
