--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 			  	<li class="side-link-1"><a class="nav-link" href="index.html#case-studies">Case Studies</a></li>
 
-			    <li class="side-link-2"><a class="nav-link" href="#contact-footer">Contact</a></li>
+			    <li class="side-link-2"><a class="nav-link" href="#contact-footer">About</a></li>
 
 		  	</div>
 
