More about page changes

--- a/aboutme.html
+++ b/aboutme.html
@@ -84,7 +84,7 @@
 
 			<p>Thank you for taking the time to get to know more about me. Let's get started~</p>
 
-			<p class="about-p">I'm a user experience designer from Houston, TX. I love learning; trying new things; teaching martial arts; and helping myself to a hot cup of mocha. I design landing pages; mobile and web apps; and I can draw awesome girls.</p>
+			<p class="about-p">I'm a user experience designer from Houston, TX. I love learning; trying new things; teaching martial arts as Master Instructor (4th Degree Black Belt) and helping myself to a hot cup of mocha. I design landing pages; mobile and web apps; and I can draw awesome girls.</p>
 				
 			
 
