--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
 				<li><a class="nav-link" href="index.html#case-studies">Case Studies</a></li>
 
 			    <li><a class="nav-link" href="aboutme.html">About</a></li>
+
+			    <li><a class="nav-link" href="https://drive.google.com/open?id=18pU3GwtHsWAms6hZEO09Xf7grsdVizeW" target="_blank">Resume</a></li>
 		
 			</ul>
 
