Fixed headlines for CC Page

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -113,9 +113,9 @@
 				
 				<p class="meta-challenge"><span>Meta-Challenge:</span> learn the essentials of Material and mobile design.</p>
 
-				<p class="task"><span>Underlying Task:</span> learn the essentials of Material and mobile design.</p>
+				<p class="task"><span>Underlying Task:</span> design comic store app prototype for Android.</p>
 
-				<p class="roles"><span>My Roles:</span> learn the essentials of Material and mobile design.</p>
+				<p class="roles"><span>My Roles:</span> digital product research and screen design.</p>
 
 			</div>
 		</div>
