--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -131,7 +131,7 @@
 				<h2>User Research</h2>
 			
 				
-				<p>I sent a mass online survey to a subReddit forum; slack channels; and social media to better understand my target audience.</p>
+				<p>I sent a mass online survey to a subReddit forum; a slack channel; and social media to better understand my target audience.</p>
 		</div>
 			
 			<!-- Figure out a way to stack the icons and text side-by-side 
