Re-designed CC Page

--- a/comiccrusade.html
+++ b/comiccrusade.html
@@ -76,7 +76,7 @@
 	<section id="hero" class=" cc-hero main-grid">
 
 		<!-- Holds hero content text"-->
-		<div class="cs-hero-container">
+		<div class="cs-hero-container cc-hero-container">
 
 			<h1 class="cs-hero-hr cc-hero-hr animated fadeIn">ComicCrusade</h1>
 
@@ -91,13 +91,27 @@
 
 		<!-- Holds image for hero -->
 
-		<div class="cc-hero-imgs">
+		<!-- <div class="cc-hero-imgs">
 			
 
 				<img src="images/cc-hero-1.png" class="cc-phone-img">
 
 
 				<img src="images/cc-hero-2.png" class="cc-phone-img">
+
+		</div> -->
+
+		<div class="cc-hero-imgs">
+			
+			<img src="images/cc-hero-final-img.png" class="cc-phone-img">
+
+			<img src="images/cc-hero-final-sm-img.png" class="cc-phone-img-2">
+
+		</div>
+
+		<div class="cc-mobile-img">
+			
+			<img src="images/cc-mobile-hero-img.png" class="cc-mobile-hero">
 
 		</div>
 
