--- a/foodswitch.html
+++ b/foodswitch.html
@@ -17,7 +17,7 @@
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="css/normalize.css">
-	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.css">
 	
 </head>
